13 Jun 2006 Added diagnose 308 reipl. Not activated in feat900.h! - Bernard
11 Jun 2006 PR# tape/88: "SCSI tape issues": 1. WTM failures with some
            mfg/model drives (e.g. STK4890), 2. Spurious HHCTA073W for
            'rewind-at-close' devtype - Fish
10 Jun 2006 PR# misc/87: Herc system startup message issuance problem - Fish
09 Jun 2006 PR# emul/91: Change FTELL, FSEEK, etc to lowercase - Fish
09 Jun 2006 Instr disassembly enhancement: display instruction name - Fish
07 Jun 2006 PR# misc/71: Incorrect disassembly of some instructions - Fish
05 Jun 2006 PR# misc/68: devinit w/no arguments == use original - Fish
05 Jun 2006 PR# dasd/81: DASDINIT option to bypass VOL1 creation - Fish
06 May 2006 Fix SYNCHRONIZE_CPUS bit-flag serialization issue - Fish
06 May 2006 Fix header-#include and stop-lan port-serialization issues
            causing some tuntap calls (e.g. set-macaddr) to fail - Fish
02 May 2006 PERFORM SUBSYSTEM FUNCTION and CONTROL ACCESS CCWs - Adrian
            Trenkwalder
02 May 2006 Fix for invalid bits in LOCATE BLOCK tape CCW - Adrian Trenkwalder
30 Apr 2006 Dyncrypt changed towards POP - Bernard van der Helm
27 Apr 2006 Fix halt_subchan to terminate suspended i/o - Greg Smith
26 Apr 2006 Fix AR tlb lookup in XC mode - Jan Jaeger
23 Apr 2006 PR# network/69: segfault @ incomplete LCS group attach - Fish
23 Apr 2006 Fix LCS port read delay / hercifc SIOCGIFFLAGS issue - Fish
21 Apr 2006 Apple OS X 10.4.6 TUNTAP_ClrIPAddr (ioctl(SIOCDIFADDR))
            patch by Kees Verruijt [kees@verruijt.net] - Fish
21 Apr 2006 tt32 v3.1: replace tt32stats cmd with tt32 cmd - Fish
21 Apr 2006 tt32 v3.1: new "tuntap32_build_herc_iface_mac" function - Fish
21 Apr 2006 tt32 v3.1: new "_ex" functions - Fish
21 Apr 2006 LCS support for RARP frames - Fish
21 Apr 2006 TUNTAP_GetFlags: don't read LCS adapter until iface is IFF_UP
            (resolves "HHCLC042E port 00: Read error" issue) - Fish